--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         <h3>Sign up with Google</h3>
                     </div>
                     <div class="lastline">
-                        <p>Already registered? <a href="">Sign in</a></p>
+                        <p>Already registered? <a href="./htmlsignin.html">Sign in</a></p>
 
                     </div>
                     
